force-app/main/default/objects/Reapproval_Reference__c/Reapproval_Reference__c.object-meta.xml
<CustomObject>
    <description>Stores serialized line items of a quote with flag for comparison during auto reapproval</description>
    <label>Reapproval Reference</label>
    <nameField>
        <displayFormat>QRR-{000000}</displayFormat>
        <label>Reapproval Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reapproval References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>