force-app/main/default/objects/Reapproval_Reference__c/fields/Level_1_Data_Changed__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Data_Changed__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>flag field to indicate quotation line item update after level 1 approval</description>
    <label>Level 1 Data Changed</label>
    <type>Checkbox</type>
</CustomField>