force-app/main/default/objects/Reapproval_Reference__c/fields/Level_4_Line_Data__c.field-meta.xml
<CustomField>
    <fullName>Level_4_Line_Data__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Serialized line item fields at the time of level 4 approval</description>
    <label>Level 4 Line Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>