force-app/main/default/objects/Reapproval_Reference__c/fields/Level_5_Finance_Data_Changed__c.field-meta.xml
<CustomField>
    <fullName>Level_5_Finance_Data_Changed__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>flag field to indicate quotation line item update after finance level 5 approval</description>
    <label>Level 5 Finance Data Changed</label>
    <type>Checkbox</type>
</CustomField>