force-app/main/default/objects/Reapproval_Reference__c/fields/Level_5_Finance_Line_Data__c.field-meta.xml
<CustomField>
    <fullName>Level_5_Finance_Line_Data__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Serialized line item fields at the time of finance level 5 approval</description>
    <label>Level 5 Finance Line Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>