force-app/main/default/objects/Reapproval_Reference__c/fields/Quote_Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Proposal_Id__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Field to capture the related quote.</description>
    <label>Quote/Proposal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>